<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context="com.example.android.doggosapp.LoginActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_welcome"
        android:textSize="@dimen/h1_dimen"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginTop="@dimen/layout_padding"
        android:padding="@dimen/layout_padding"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_prompt"
        android:textSize="@dimen/h3_dimen"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:gravity="center"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:textSize="@dimen/h2_dimen"
        />
    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textSize="@dimen/h2_dimen"
        />
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:onClick="loginOnClick"
        android:background="@drawable/buttons"/>
    <TextView
        android:id="@+id/error_message_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/h3_dimen"
        tools:text="@tools:sample/lorem/random"
        android:visibility="gone"/>

</LinearLayout>
