<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.doggosapp.BreedsActivity"
    android:background="@color/colorPrimaryDark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/breeds_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/pick_dog_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/layout_padding"
            android:text="@string/pick_dog_prompt"
            android:textColor="@color/cardview_dark_background"
            android:textSize="@dimen/h3_dimen" />

        <android.support.v7.widget.CardView
            android:id="@+id/poodle_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/breed_image_dimen"
            android:onClick="breedOnClick"
            android:tag="@string/breed_poodle"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark">


                <ImageView
                    android:id="@+id/poodle_breed_card_iv"
                    android:layout_width="@dimen/breed_image_dimen"
                    android:layout_height="@dimen/breed_image_dimen"
                    android:scaleType="fitXY"
                    android:tag="@string/breed_poodle"
                    tools:background="@tools:sample/avatars" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:text="@string/breed_poodle"
                    android:gravity="end"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="@dimen/large_letters"
                    android:textAllCaps="true"
                    android:letterSpacing="@dimen/letter_space_tight"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/retriever_breed_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/breed_image_dimen"
            android:onClick="breedOnClick"
            android:tag="@string/breed_retriever"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:text="@string/breed_retriever"
                    android:gravity="start"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="@dimen/large_letters"
                    android:textAllCaps="true"
                    android:letterSpacing="@dimen/letter_space_tight"/>

                <ImageView
                    android:id="@+id/retriever_breed_card_iv"
                    android:layout_width="@dimen/breed_image_dimen"
                    android:layout_height="@dimen/breed_image_dimen"
                    android:scaleType="fitXY"
                    android:tag="@string/breed_retriever"
                    tools:background="@tools:sample/avatars" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/spaniel_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/breed_image_dimen"
            android:onClick="breedOnClick"
            android:tag="@string/breed_spaniel"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark">

                <ImageView
                    android:id="@+id/spaniel_breed_card_iv"
                    android:layout_width="@dimen/breed_image_dimen"
                    android:layout_height="@dimen/breed_image_dimen"
                    android:scaleType="fitXY"
                    android:tag="@string/breed_spaniel"
                    tools:background="@tools:sample/avatars" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:text="@string/breed_spaniel"
                    android:gravity="end"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="@dimen/large_letters"
                    android:textAllCaps="true"
                    android:letterSpacing="@dimen/letter_space_tight"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/terrier_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/breed_image_dimen"
            android:onClick="breedOnClick"
            android:tag="@string/breed_terrier"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:text="@string/breed_terrier"
                    android:gravity="start"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="@dimen/large_letters"
                    android:textAllCaps="true"
                    android:letterSpacing="@dimen/letter_space_tight"/>

                <ImageView
                    android:id="@+id/terrier_breed_card_iv"
                    android:layout_width="@dimen/breed_image_dimen"
                    android:layout_height="@dimen/breed_image_dimen"
                    android:scaleType="fitXY"
                    android:tag="@string/breed_terrier"
                    tools:background="@tools:sample/avatars" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>


